# mfpgen

./: README.md  pyproject.toml
mfpgen/: __init__.py  constants.py  instgen.py
mfpgen/environments/: metric_tree.py
mfpgen/environments/utils/: utils.py
mfpgen/rngenerators/: __init__.py  rngenerators.py
mfpgen/utils/: utils.py
src/mfpgen/: constants.py  instgen.py
src/mfpgen/environments/: metric_tree.py
src/mfpgen/rngenerators/: rngenerators.py
tests/: context.py  test_basic.py  test_experiment.py
