[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mfpgen"
authors = [
    {name = "Mauro Alejandro Montenegro", email = "m.montenegro.meza@gmail.com"},
]
description = "Package to generate MFP instances"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Firefighter Problem", "Graphs","Tree-Structure"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]
